--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,28 +9,24 @@ body {
     background: #eeeeee;
 }
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
-
-.check_circle {
-    color: green;
-}
-
 h1 {
     text-align: center;
     font-size: 2rem;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0 20%;
+    border: 2px solid red;
+    height: 100vh;
+}
+
 header {
+    margin-top: 20px;
     display: flex;
     height: 80px;
-    max-width: 60%;
-    margin: auto;
     align-items: center;
 }
 
@@ -59,8 +55,6 @@ input {
 main {
     display: flex;
     flex-wrap: wrap;
-    max-width: 60%;
-    margin: auto;
     padding-top: 40px;
 }
 
@@ -97,7 +91,7 @@ main {
     height: 100%;
 }
 
-.item-icon span {
+.item-icon img {
     user-select: none;
 }
 
