--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,6 +33,8 @@ input {
     flex: 80%;
     height: 100%;
     padding-left: 10%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 .add {
@@ -67,8 +69,7 @@ main {
     box-shadow: 0 0 20px #ccc;
     margin-bottom: 2%;
     cursor: pointer;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px;
 }
 
 .item.clicked {
@@ -88,6 +89,7 @@ main {
     text-align: center;
     font-size: 2rem;
     height: 100%;
+
 }
 
 .item-icon img {
@@ -123,4 +125,6 @@ main {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+
+
 
