--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: #eeeeee;
+    min-height: 100vh;
 }
 
 h1 {
@@ -19,7 +20,8 @@ h1 {
     flex-direction: column;
     justify-content: flex-start;
     padding: 0 20%;
-    height: 100vh;
+    min-height: 100vh;
+    width: 100%;
 }
 
 header {
@@ -33,6 +35,7 @@ input {
     flex: 80%;
     height: 100%;
     padding-left: 10%;
+    font-size: 1rem;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -126,5 +129,19 @@ main {
     border-bottom-right-radius: 10px;
 }
 
+
+@media  screen and (max-width: 768px) {
+    .container {
+        padding: 0 2%;
+    }
+
+    header {
+        height: 50px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+}
 
 
